--- a/packages/baserecord/client/record.html
+++ b/packages/baserecord/client/record.html
@@ -9,27 +9,37 @@
 <template name="recordlist">
     <div class="panel panel-default">
         <div class="panel-heading">{{> navbar ""}}</div>
-        <div class="panel-body">
+        <div class="panel-body panel-collapse in" id="collapseExample">
             <a href="/apartments">APARTMENTS</a>
             <a href="/transactions">TRANSACCIONES</a>
             <a href="/report/transactions">Listado de Transacciones</a>
             <button class="js-add-record">+</button>
 
-            <div class="js-recordlist_container">
-                <table class="table table-striped table-hover">
-                    <thead>
-                    <tr>
-                        {{#each col in get_columns}}
+            <!--div class="1js-recordlist_container"-->
+            <table class="table table-striped table-hover listview_header">
+                <thead>
+                <tr>
+                    {{#each col in get_columns}}
+                        {{#with col}}
                             <th>
-                                <span>{{col.label}}</span>
+                                <span class="js-column">{{col.label}}
+                                    {{#if is_sort_column col}}
+                                        <span class="glyphicon {{get_sort_direction_glyph_class}}"
+                                              aria-hidden="true"></span>
+                                    {{/if}}
+                                </span>
                             </th>
-                        {{/each}}
-                    </tr>
-                    </thead>
+                        {{/with}}
+                    {{/each}}
+                </tr>
+                </thead>
+            </table>
+            <div class="listview_content js-recordlist_container">
+                <table class="table table-striped table-hover">
                     <tbody>
                     {{#each record in records}}
                         {{#with record}}
-                            <tr class="js-record-row">
+                            <tr class="js-record-row2" onclick="window.location='/transactions/{{record.number}}'">
                                 {{#each column in get_columns}}
                                     <td>
                                         <span>{{get_field_value record column.field}}</span>
