--- a/packages/baserecord/client/record.html
+++ b/packages/baserecord/client/record.html
@@ -39,7 +39,7 @@
                     <tbody>
                     {{#each record in records}}
                         {{#with record}}
-                            <tr class="js-record-row2" onclick="window.location='/transactions/{{record.number}}'">
+                            <tr class="js-record-select">
                                 {{#each column in get_columns}}
                                     <td>
                                         <span>{{get_field_value record column.field}}</span>
@@ -56,7 +56,7 @@
             </div>
         </div>
     </div>
-    {{> UI.dynamic template=recordTemplate }}
+    <!--{{> UI.dynamic template=recordTemplate }}-->
 </template>
 
 <template name="record">
@@ -65,6 +65,7 @@
             {{#with record}}
                 <div class="panel-heading">{{> recordbar }}</div>
                 <div class="panel-body">
+                    {{> record_alerts alerts=get_alerts}}
                     <form class="js-record-form" role="form">
                         <div class="row">
                             {{#each field in fields}}
@@ -150,4 +151,13 @@
                readonly="{{readonly}}" detailname="{{detail_name}}" row="{{row_nr}}"/>
         <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
     </div>
+</template>
+
+<template name="record_alerts">
+    {{#each alert in alerts}}
+        <div class="alert alert-{{alert.type}}" role="alert">
+            <button type="button" class="close" data-dismiss="alert">x</button>
+            <strong>{{alert.title}}</strong> {{alert.description}}
+        </div>
+    {{/each}}
 </template>
