--- a/packages/baserecord/client/record.html
+++ b/packages/baserecord/client/record.html
@@ -7,118 +7,120 @@
 
 
 <template name="recordlist">
-    <div class="panel panel-default">
-        <div class="panel-heading">{{> navbar ""}}</div>
-        <div class="panel-body panel-collapse in" id="collapseExample">
-            <a href="/apartments">APARTMENTS</a>
-            <a href="/transactions">TRANSACCIONES</a>
-            <a href="/report/transactions">Listado de Transacciones</a>
-            <button class="js-add-record">+</button>
-
-            <!--div class="1js-recordlist_container"-->
-            <table class="table table-striped table-hover listview_header">
-                <thead>
-                <tr>
-                    {{#each col in get_columns}}
-                        {{#with col}}
-                            <th>
+    {{#if currentUser }}
+        <div class="panel panel-default listview">
+            <div class="panel-heading">
+                <button class="btn btn-primary btn-sm js-add-record pull-right"><span class="glyphicon glyphicon-plus"></span></button>
+                <div class="clearfix"></div>
+            </div>
+            <div class="panel-body">
+                <table class="table table-striped table-hover listview_header_table">
+                    <thead>
+                    <tr>
+                        {{#each col in get_columns}}
+                            {{#with col}}
+                                <th>
                                 <span class="js-column">{{col.label}}
                                     {{#if is_sort_column col}}
                                         <span class="glyphicon {{get_sort_direction_glyph_class}}"
                                               aria-hidden="true"></span>
                                     {{/if}}
                                 </span>
-                            </th>
-                        {{/with}}
-                    {{/each}}
-                </tr>
-                </thead>
-            </table>
-            <div class="listview_content js-recordlist_container">
-                <table class="table table-striped table-hover">
-                    <tbody>
-                    {{#each record in records}}
-                        {{#with record}}
-                            <tr class="js-record-select">
-                                {{#each column in get_columns}}
-                                    <td>
-                                        <span>{{get_field_value record column.field}}</span>
-                                    </td>
-                                {{/each}}
-                            </tr>
-                        {{/with}}
-                    {{/each}}
-                    <tr id="showMoreResults">
-                        <td><span class="loading">...</span></td>
+                                </th>
+                            {{/with}}
+                        {{/each}}
                     </tr>
-                    </tbody>
+                    </thead>
                 </table>
+                <div class="listview_content js-recordlist_container">
+                    <table class="table table-striped table-hover">
+                        <tbody>
+                        {{#each record in records}}
+                            {{#with record}}
+                                <tr class="js-record-select">
+                                    {{#each column in get_columns}}
+                                        <td>
+                                            <span>{{get_field_value record column.field}}</span>
+                                        </td>
+                                    {{/each}}
+                                </tr>
+                            {{/with}}
+                        {{/each}}
+                        <tr id="showMoreResults">
+                            <td><span class="loading">...</span></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
-    <!--{{> UI.dynamic template=recordTemplate }}-->
+        <!--{{> UI.dynamic template=recordTemplate }}-->
+    {{/if}}
 </template>
 
 <template name="record">
-    <div class="panel panel-primary">
-        {{#if record}}
-            {{#with record}}
-                <div class="panel-heading">{{> recordbar }}</div>
-                <div class="panel-body">
-                    {{> record_alerts alerts=get_alerts}}
-                    <form class="js-record-form" role="form">
-                        <div class="row">
-                            {{#each field in fields}}
-                                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                                    {{#let input_template=(get_input_template field.type) fname=field.name ftype=field.type fvalue=(get_field_value record field.name) readonly=(get_field_readonly record field.name)}}
-                                        {{> Template.dynamic template='record_input' data=(create_object input_template=input_template fname=fname ftype=ftype fvalue=fvalue readonly=readonly class='js-record-field')}}
-                                    {{/let}}
-                                </div>
-                            {{/each}}
-                        </div>
-                        <div>
-                            <div class="panel panel-default">
-                                {{#each detail_field in detail_fields}}
-                                    {{#let detail_name=detail_field.name row_fields=detail_field.fields}}
-                                        <button class="js-add-record-row" fieldname="{{detail_name}}">+</button>
-                                        <table class="table table-striped table-condensed table-hover">
-                                            <thead>
-                                            <tr>
-                                                {{#each field in row_fields}}
-                                                    <th>{{field.name}}</th>
-                                                {{/each}}
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            {{#each (get_detail_records record detail_name)}}
-                                                {{#let row_nr = @index row=this}}
-                                                    <tr>
-                                                        {{#each field in row_fields}}
-                                                            <td>
-                                                                {{#let fvalue=(get_field_value row field.name)}}
-                                                                    {{> Template.dynamic template=(get_input_template field.type) data=(create_object fname=field.name ftype=field.type fvalue=fvalue readonly=false class='js-row-field' detail_name=detail_name row_nr=row_nr)}}
-                                                                {{/let}}
-                                                            </td>
-                                                        {{/each}}
-                                                        <td>
-                                                            <button class="js-delete-row" detailname="{{detail_name}}"
-                                                                    row="{{@index}}">&times;</button>
-                                                        </td>
-                                                    </tr>
-                                                {{/let}}
-                                            {{/each}}
-                                            </tbody>
-                                        </table>
-                                    {{/let}}
+    {{#if currentUser}}
+        <div class="panel panel-primary">
+            {{#if record}}
+                {{#with record}}
+                    <div class="panel-heading">{{> recordbar }}</div>
+                    <div class="panel-body">
+                        {{> record_alerts alerts=get_alerts}}
+                        <form class="js-record-form" role="form">
+                            <div class="row">
+                                {{#each field in fields}}
+                                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                                        {{#let input_template=(get_input_template field.type) fname=field.name ftype=field.type fvalue=(get_field_value record field.name) readonly=(get_field_readonly record field.name)}}
+                                            {{> Template.dynamic template='record_input' data=(create_object input_template=input_template fname=fname ftype=ftype fvalue=fvalue readonly=readonly class='js-record-field')}}
+                                        {{/let}}
+                                    </div>
                                 {{/each}}
                             </div>
-                        </div>
-                    </form>
-                </div>
-                {{afterRender}}
-            {{/with}}
-        {{/if}}
-    </div>
+                            <div>
+                                <div class="panel panel-default">
+                                    {{#each detail_field in detail_fields}}
+                                        {{#let detail_name=detail_field.name row_fields=detail_field.fields}}
+                                            <button class="js-add-record-row" fieldname="{{detail_name}}">+</button>
+                                            <table class="table table-striped table-condensed table-hover">
+                                                <thead>
+                                                <tr>
+                                                    {{#each field in row_fields}}
+                                                        <th>{{field.name}}</th>
+                                                    {{/each}}
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                {{#each (get_detail_records record detail_name)}}
+                                                    {{#let row_nr = @index row=this}}
+                                                        <tr>
+                                                            {{#each field in row_fields}}
+                                                                <td>
+                                                                    {{#let fvalue=(get_field_value row field.name)}}
+                                                                        {{> Template.dynamic template=(get_input_template field.type) data=(create_object fname=field.name ftype=field.type fvalue=fvalue readonly=false class='js-row-field' detail_name=detail_name row_nr=row_nr)}}
+                                                                    {{/let}}
+                                                                </td>
+                                                            {{/each}}
+                                                            <td>
+                                                                <button class="js-delete-row"
+                                                                        detailname="{{detail_name}}"
+                                                                        row="{{@index}}">&times;</button>
+                                                            </td>
+                                                        </tr>
+                                                    {{/let}}
+                                                {{/each}}
+                                                </tbody>
+                                            </table>
+                                        {{/let}}
+                                    {{/each}}
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    {{afterRender}}
+                {{/with}}
+            {{/if}}
+        </div>
+    {{/if}}
 </template>
 
 <template name="record_input">
