--- a/packages/baserecord/client/record.html
+++ b/packages/baserecord/client/record.html
@@ -148,7 +148,7 @@
 
 <template name="date_input">
     <div class="input-group date">
-        <input class="{{class}} js-date-input form-control" type="text" name="{{fname}}" value="{{fvalue}}"
+        <input class="{{class}} js-date-input form-control" type="text" name="{{fname}}" value="{{formatDate fvalue}}"
                readonly="{{readonly}}" detailname="{{detail_name}}" row="{{row_nr}}"/>
         <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
     </div>
